tests/baselines/reference/indexSignatureWithAccessibilityModifier.errors.txt
==== tests/cases/compiler/indexSignatureWithAccessibilityModifier.ts (4 errors) ====
    interface I {
        [public x: string]: string;
                ~
!!! error TS1018: An index signature parameter cannot have an accessibility modifier.
         ~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }
    
    class C {
        [public x: string]: string
                ~
!!! error TS1018: An index signature parameter cannot have an accessibility modifier.
         ~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
    }